# ML-Stock-Prediction

./: README.md
cs229-sentiment-vs-tech-starter/: .gitignore  README.md  Untitled copy.ipynb  main.py  pyproject.toml  requirements-uv.txt  requirements.txt  run_pipeline.sh  sent_headlines_triplet.csv  sentiment_features_enhanced.csv
cs229-sentiment-vs-tech-starter/configs/: default.yaml
cs229-sentiment-vs-tech-starter/models/: best_model_metadata.json  logreg_baseline_h5.npz
cs229-sentiment-vs-tech-starter/notebooks/: EDA_Baseline-FinalResult.ipynb  EDA_Baseline.ipynb  EDA_Baseline_test_zhenyu.ipynb  Sentiment_Integration.ipynb  Untitled.ipynb  sentiments.ipynb
cs229-sentiment-vs-tech-starter/raw/: ohlcv_BAC.csv  ohlcv_BP.csv  ohlcv_DIA.csv  ohlcv_GS.csv  ohlcv_JPM.csv  ohlcv_KO.csv  ohlcv_MA.csv  ohlcv_MRK.csv  ohlcv_MS.csv  ohlcv_MSFT.csv  ohlcv_NKE.csv  ohlcv_QCOM.csv  ohlcv_SHOP.csv  ohlcv_TGT.csv  ohlcv_UNH.csv
cs229-sentiment-vs-tech-starter/scripts/: LSTM.py  LSTM_copy.py  LogisticRegression.py  analyze_headlines_llm.py  analyze_models.py  build_headline_sentiment.py  build_news_simple.py  build_sentiment_features.py  build_sentiment_finbert.py  build_technical_features.py  compare_nn_architectures.py  enhance_llm_sentiment.py  fetch_headlines.py  fetch_ohlcv.py  make_labels.ipynb  make_labels.py  merge_T_plus_news_simple.py  merge_features.py  plot_best_roc_curves.py  plot_llm_roc_curves.py  run_ablation.py  train_baselines.py  train_ensembles.py  train_gru.py  train_logreg.py  train_logreg_simple.py  train_lstm_sequences_pytorch.py  train_xgboost.py  (+1 more)
(+47 files in other folders)
