[project]
name = "cs229-sentiment-vs-tech-starter"
version = "0.1.0"
description = "Comparative ML study: FinBERT sentiment vs technical indicators for stock prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "transformers>=4.43.0",
    "torch>=2.2.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "jupyter>=1.1.1",
    "yfinance>=0.2.66",
    "feedparser>=6.0.12",
    "huggingface-hub>=0.36.0",
    "sentence-transformers>=5.1.2",
]
